
@section Changelog


==================================
Version 0.200 - 2014/12/03 by Andi
==================================
New Features, Improvements
--------------------------
- Changed sensor_scheduler to scheduler.h/ scheduler.c so that it is the scheduler for the whole system
- Added detection logic to scheduler.c

Fixed Bugs, Changes
-------------------
- Fixed unstability in communication with sim908 module by pausing scheduler timer in the _SIM908_callback function.
   This seems to have fixed most, if no all, communication problems and the system is now running stable at a frq of 
   1KHz on the scheduler timer with a system load around 50%
  

ToDo
----		
- MISRA check all files
- Doxygen structure proofing in all files
- Notes SIM908:
   + If PIN is requered, wait for "+CPIN: SIM PIN" response (Hardcoded with 1 sec delay)


=====================================
Version 0.163 - 2014/12/03 by Kenneth
=====================================
New Features, Improvements
--------------------------
- Added functions in timer.c to store interrupt flag registers and pause all timers and then restore the registers when resuming
- Moved recording of optional data values (acceleration and temperature) to MSD optional data function, as it is redundant 
   to calculate everytime it checks for accidents.
- Added module test for Car Panel: test_module_car_panel
- Minor (renaming of local variable) bug fixed in SPI driver

Fixed Bugs, Changes
-------------------
- Fixed bug in starting timer when an automatically accident has triggered
- MSD version 2: Changed structure of encoding optional data, so that only values is sent
- Added check for emmergency flags, when setting the status LED on car panel. This is done so that it lights up red while sending
   and green when it is done sending.
- Renamed UnitTest to test_unit
- Discarded unit test implementation for MSD as all the functions to set MSD are static
  

ToDo
----		
- MISRA check all files